[FIX] Send: add spacing to error (RT-2147)
Add some spacing under under error messages under
recipient input box

--- a/src/less/ripple/forms.less
+++ b/src/less/ripple/forms.less
@@ -66,7 +66,7 @@ form {
   err {
     color: @midred;
     font-size: 13px;
-    height: 23px;
+    min-height: 23px;
   }
 
   .field-hint {
