--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1274,6 +1274,10 @@
     label[for=send_dt] {
       margin-right: 20px;
     }
+
+    .errorGroup {
+      margin-bottom: 10px;
+    }
   }
 
   .mode-status {
